Fix overflowing content with custom stage size

--- a/src/playground/interface.css
+++ b/src/playground/interface.css
@@ -46,8 +46,6 @@ a {
 }
 
 .editor {
-    min-width: 1024px;
-    min-height: 640px;
     height: 100%;
 }
 .editor .center {
